[gd_scene load_steps=3 format=3 uid="uid://civct2n8w6ov0"]

[ext_resource type="Script" uid="uid://cxxxqilll2pmm" path="res://new_document_window.gd" id="1_8m60f"]
[ext_resource type="PackedScene" uid="uid://dd62abvrwob6l" path="res://document_config_panel.tscn" id="2_wgmll"]

[node name="NewDocumentWindow" type="Window"]
oversampling_override = 1.0
title = "New Image..."
initial_position = 1
size = Vector2i(269, 290)
wrap_controls = true
script = ExtResource("1_8m60f")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="DocumentConfigPanel" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_wgmll")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Create" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Create" to="." method="_on_create_pressed"]
